--- a/assets/Prism.js/themes/prism-tomorrow.css
+++ b/assets/Prism.js/themes/prism-tomorrow.css
@@ -52,7 +52,7 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: #999;
+	color: #00E676;
 }
 
 .token.punctuation {
